# minimal_math

./: README.md  pyproject.toml
.github/workflows/: publish.yaml
src/minimal_math/: __init__.py  operations.py
