[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minimal_math"
version = "0.1.0"
authors = [
    { name = "Jascha Beste", email = "bestejascha@gmail.com " },
]
description = "A minimal math library with a sum function"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Askir/minimal_math"
"Bug Tracker" = "https://github.com/Askir/minimal_math/issues"